--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jiangweihao.sport">
-    <!-- 基础模块（必须加入以下声明）START -->
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:name=".MyLeanCloudApp"
@@ -17,16 +10,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".coding.activity.TestActivity"></activity>
-        <activity android:name=".coding.testwheelview.WheelViewActivity"></activity>
-<!--        <activity-->
-<!--            android:name=".coding.activity.MainActivity"-->
-<!--            android:launchMode="singleTask"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:windowSoftInputMode="adjustPan|stateHidden"-->
-<!--            tools:ignore="ExtraText" >-->
-
-<!--        </activity>-->
+        <activity android:name=".coding.activity.GroupDetailActivity"></activity>
+        <activity android:name=".coding.activity.CreateGroupItemActivity" />
+        <activity android:name=".coding.activity.NearByActivity" />
+        <activity android:name=".coding.activity.TestActivity" />
+        <activity android:name=".coding.testwheelview.WheelViewActivity" /> <!-- <activity -->
+        <!-- android:name=".coding.activity.MainActivity" -->
+        <!-- android:launchMode="singleTask" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:windowSoftInputMode="adjustPan|stateHidden" -->
+        <!-- tools:ignore="ExtraText" > -->
+        <!-- </activity> -->
         <activity
             android:name=".coding.activity.MainActivity"
             android:screenOrientation="portrait"
@@ -37,23 +31,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".coding.activity.DetailActivity1"></activity>
-        <activity android:name=".coding.activity.LoginActivity"></activity>
+        <activity android:name=".coding.activity.DetailActivity1" />
+        <activity android:name=".coding.activity.LoginActivity" />
         <activity android:name=".coding.activity.RegisterActivity" /> <!-- 反馈组件（需要加入以下声明）START -->
         <activity android:name="com.avos.avoscloud.feedback.ThreadActivity" />
-        <activity android:name=".coding.activity.ReserveActivity"/>
-        <activity android:name=".coding.activity.AppointActivity"></activity>
+        <activity android:name=".coding.activity.ReserveActivity" />
+        <activity android:name=".coding.activity.AppointActivity" />
         <activity
             android:name=".talking.activity.PrepareActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".talking.activity.RoomsActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".talking.activity.ChatActivity"
-            android:screenOrientation="portrait"/>
-        <service android:name=".talking.ServerService"/>
+            android:screenOrientation="portrait" />
+
+        <service android:name=".talking.ServerService" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
